<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.comdnmr</groupId>
        <artifactId>ringnmr-parent</artifactId>
        <version>1.11</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>ringnmr-gui</artifactId>
    <version>1.11</version>
    <name>ringnmr-gui</name>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>org.comdnmr.comdnmr.chart.NMRApp</mainClass>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.comdnmr</groupId>
            <artifactId>ringnmr</artifactId>
            <version>1.11</version>
        </dependency>
        <dependency>
            <groupId>org.nmrfx</groupId>
            <artifactId>nmrfx-utils</artifactId>
            <version>11.2.4-a</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.6.10</version>
        </dependency>
        <dependency>
            <groupId>de.jangassen</groupId>
            <artifactId>nsmenufx</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx</artifactId>
            <version>8.6</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>15</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>15</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>15</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>15</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>15</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <configuration>
                    <mainClass>org.nmrfx.processor.gui.MainApp</mainClass>
                    <options>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.tk=de.jangassen.nsmenufx</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.tk.quantum=de.jangassen.nsmenufx</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.tk=de.jangassen.nsmenufx</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.glass.ui=de.jangassen.nsmenufx</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.glass.ui.mac=de.jangassen.nsmenufx</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.menu=de.jangassen.nsmenufx</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control=de.jangassen.nsmenufx</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>assembly:package</id>
                        <phase>package</phase>
                        <goals>
                            <goal>build-classpath</goal>
                        </goals>
                        <configuration>
                            <outputFilterFile>true</outputFilterFile>
                            <excludeScope>system</excludeScope>
                            <excludeGroupIds>junit,org.mockito,org.hamcrest</excludeGroupIds>
                            <outputFile>target/myFilter.properties</outputFile>
                            <prefix>.</prefix>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <id>fixFilters</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <classpathScope>compile</classpathScope>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>org.python.util.jython</argument>
                                <argument>src/main/scripts/filter.py</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>maniJar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jar</executable>
                            <arguments>
                                <argument>cfm</argument>
                                <argument>target/Manifest.jar</argument>
                                <argument>target/Manifest.txt</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <!-- Required for https://issues.apache.org/jira/browse/MASSEMBLY-289 -->
                <executions>
                    <execution>
                        <id>assembly:package</id>
                        <phase>package</phase>
                        <goals>
                            <!--
                              Work around for http://jira.codehaus.org/browse/MASSEMBLY-97
                              as the goal should be attached.
                            -->
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/assembly/bin.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                    <execution>
                        <id>assembly:package:noattach</id>
                        <phase>package</phase>
                        <goals>
                            <!--
                              Work around for http://jira.codehaus.org/browse/MASSEMBLY-97
                              as the goal should be attached.
                            -->
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/assembly/bin-dir.xml</descriptor>
                            </descriptors>
                            <attach>false</attach>
                        </configuration>
                    </execution>
                </executions>
            </plugin>  
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>

</project>
